--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -200,7 +200,7 @@
                         }
                     }
                 </div>
-                <!-- List View -->
+                <!-- List View Grupos Inscritos -->
                 <div class="row d-none" id="listView0">
                     @foreach (var grupo in ViewBag.GruposInscritos)
                     {
@@ -351,6 +351,7 @@
             </div>
         }
 
+        <!-- Grupos disponibles para inscripción -->
         <h1>@ViewBag.Title</h1>
         <div class="d-flex justify-content-between my-4">
             <!-- Barra de búsqueda -->
@@ -396,12 +397,12 @@
                                             {
                                                 <span class="badge bg-danger" style="float:left; margin-right: 10px;">Sin cupo</span>
                                             }
-                                            @if (ViewBag.Role == 1 || ViewBag.Role == 2)
+                                            @if (ViewBag.Role == 1)
                                             {
                                                 <span class="badge bg-info" style="float:left; margin-right: 10px;">Inscripciones: @(grupo.cupoActual)</span>
                                             }
                                         </div>
-                                        @if (ViewBag.Role == 1 || ViewBag.Role == 2)
+                                        @if (ViewBag.Role == 1)
                                         {
                                             <div style="float:right">
                                                 <i class="bi bi-pencil-square" type="button" data-bs-toggle="modal" data-bs-target="#modalEditar" onclick="actualizarModalEditar(@grupo.idGrupo)" style="padding-right:4px;"></i>
@@ -476,7 +477,7 @@
 
 
                                     <div class="mt-3">
-                                        @if (ViewBag.Role == 1 || ViewBag.Role == 2)
+                                        @if (ViewBag.Role == 1)
                                         {
                                             @Html.ActionLink("Ver participantes", "ListaParticipantes", "Participante", new { idGrupo = grupo.idGrupo }, new { @style = "color:white", @class = "btn btn-primary" })
                                         }
@@ -526,7 +527,7 @@
                                         }
                                     </div>
                                     <div class="mt-2">
-                                        @if (ViewBag.Role == 1 || ViewBag.Role == 2)
+                                        @if (ViewBag.Role == 1)
                                         {
                                             <div>
                                                 <div class="d-flex align-items-center justify-content-center" type="button" data-bs-toggle="modal" data-bs-target="#modalEditarAdjunto" onclick="actualizarModalEditarAdjunto(@grupo.idGrupo)">
@@ -583,7 +584,7 @@
                                     <div class="d-flex card-header justify-content-between align-items-start">
                                         <h4 class="mb-2">@grupo.nombre</h4>
                                         <div class="ms-2">
-                                            @if (ViewBag.Role == 1 || ViewBag.Role == 2)
+                                            @if (ViewBag.Role == 1)
                                             {
                                                 <div style="float:right">
                                                     <i class="bi bi-pencil-square" type="button" data-bs-toggle="modal" data-bs-target="#modalEditar" onclick="actualizarModalEditar(@grupo.idGrupo)" style="padding-right:4px;"></i>
@@ -614,7 +615,7 @@
                                         {
                                             <span class="badge bg-danger" style="float:left; margin-right: 10px;">Sin cupo</span>
                                         }
-                                        @if (ViewBag.Role == 1 || ViewBag.Role == 2)
+                                        @if (ViewBag.Role == 1)
                                         {
                                             <span class="badge bg-info" style="float:left; margin-right: 10px;">Inscripciones: @(grupo.cupoActual)</span>
                                         }
@@ -692,7 +693,7 @@
                                             </div>
                                     </div>
                                         <div class="mt-3 align-items-center text-center">
-                                        @if (ViewBag.Role == 1 || ViewBag.Role == 2)
+                                        @if (ViewBag.Role == 1)
                                         {
                                             @Html.ActionLink("Ver participantes", "ListaParticipantes", "Participante", new { idGrupo = grupo.idGrupo }, new { @style = "color:white", @class = "btn btn-primary" })
                                         }
@@ -742,7 +743,7 @@
                                         }
                                     </div>
                                     <div class="mt-2">
-                                        @if (ViewBag.Role == 1 || ViewBag.Role == 2)
+                                        @if (ViewBag.Role == 1)
                                         {
                                             <div>
                                                 <div class="d-flex align-items-center justify-content-center" type="button" data-bs-toggle="modal" data-bs-target="#modalEditarAdjunto" onclick="actualizarModalEditarAdjunto(@grupo.idGrupo)">
@@ -775,10 +776,6 @@
         }
     </div>
 
-
-    
-
-    
 
     <div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="modalEliminarLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
