--- a/webMetics/Views/Asesor/CrearAsesor.cshtml
+++ b/webMetics/Views/Asesor/CrearAsesor.cshtml
@@ -90,7 +90,7 @@
                             @Html.ValidationMessageFor(asesorModel => asesorModel.descripcion, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
-                            @Html.LabelFor(asesorModel => asesorModel.telefono, new { Style = "font-size:22px" })
+                            @Html.LabelFor(asesorModel => asesorModel.telefono, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(asesorModel => asesorModel.telefono, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.telefono, "", new { @class = "text-danger" })
                         </div>
