Inscripción Manual de participantes.

--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -10,11 +10,22 @@
     <div class="contenedor-tipos-actividades container-fluid">
         @if (urlReferrer != null)
         {
-            <div class="d-flex justify-content-start mb-3">
-                <a class="text-dark fs-4" href="@Url.Action("ListaGruposDisponibles", "Grupo")">
-                    <i class="bi bi-arrow-left"></i>
-                </a>
-            </div>
+            @if (ViewBag.Role == 1)
+            {
+                <div class="d-flex justify-content-start mb-3">
+                    <a class="text-dark fs-4" href="@Url.Action("ListaGruposDisponibles", "Grupo")">
+                        <i class="bi bi-arrow-left"></i>
+                    </a>
+                </div>
+            }
+            else if (ViewBag.Role == 2)
+            {
+                <div class="d-flex justify-content-start mb-3">
+                    <a class="text-dark fs-4" href="@Url.Action("MisModulos", "Asesor")">
+                        <i class="bi bi-arrow-left"></i>
+                    </a>
+                </div>
+            }
         }
 
         <h1>@ViewBag.NombreGrupo</h1>
@@ -148,9 +159,14 @@
                 </table>
             }
             <div class="d-flex justify-content-center my-4">
-                <a href="@Url.Action("ListaGruposDisponibles", "Grupo")" class="btn btn-primary btn-block">
-                    Regresar
-                </a>
+                @if (ViewBag.Role == 1)
+                {
+                    <a href="@Url.Action("ListaGruposDisponibles", "Grupo")" class="btn btn-secondary btn-block">Regresar</a>
+                }
+                else if (ViewBag.Role == 2)
+                {
+                    <a href="@Url.Action("MisModulos", "Asesor")" class="btn btn-secondary btn-block">Regresar</a>
+                }
             </div>
         </div>
     </div>
