--- a/webMetics/Views/Participante/FormularioParticipante.cshtml
+++ b/webMetics/Views/Participante/FormularioParticipante.cshtml
@@ -1,5 +1,6 @@
 ﻿@model webMetics.Models.ParticipanteModel
 @using webMetics.Controllers
+@using webMetics.Helpers
 @{
     ViewBag.Title = "Formulario de Participante";
 
@@ -81,7 +82,16 @@
                         </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(participanteModel => participanteModel.tipoParticipante, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(participanteModel => participanteModel.tipoParticipante, new SelectList(Enum.GetValues(typeof(webMetics.Models.TipoDeParticipantes))), "Seleccione un tipo de participante...", new { @class = "form-control" })
+                            @Html.DropDownListFor(
+                                     usuarioModel => usuarioModel.tipoParticipante,
+                                     new SelectList(
+                                     Enum.GetValues(typeof(webMetics.Models.TipoDeParticipantes))
+                                     .Cast<webMetics.Models.TipoDeParticipantes>()
+                                     .Select(e => new { Value = e, Text = EnumHelper.GetDisplayName(e) }),
+                                     "Value",
+                                     "Text"),
+                                     "Seleccione un tipo de participante...",
+                                     new { @class = "form-control" })
                             @Html.ValidationMessageFor(participanteModel => participanteModel.tipoParticipante, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
