Se resalta modalidad del módulo.

--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -549,7 +549,7 @@
                                         } *@
                                     </div>
                                 </div>
-                                <div class="card-footer text-muted">
+                                    <div class="card-footer text-muted bg-primary bg-opacity-25 border-primary border-1 border-opacity-25">
                                     @if (string.Equals(grupo.modalidad, "Presencial", StringComparison.OrdinalIgnoreCase))
                                     {
                                         @grupo.lugar
