Etiqueta para cuando la inscripción está fuera de plazo.

--- a/webMetics/Views/Asesor/MisModulos.cshtml
+++ b/webMetics/Views/Asesor/MisModulos.cshtml
@@ -77,6 +77,10 @@
                                                     {
                                                         <span class="badge bg-danger" style="float:left; margin-right: 10px;">Sin cupo</span>
                                                     }
+                                                    @if (ViewBag.DateNow > grupo.fechaFinalizacionInscripcion)
+                                                    {
+                                                        <span class="badge bg-danger" style="float:left; margin-right: 10px;">Inscripción fuera de plazo</span>
+                                                    }
                                                     @if (ViewBag.Role == 1 || ViewBag.Role == 2)
                                                     {
                                                         <span class="badge bg-info" style="float:left; margin-right: 10px;">Inscripciones: @(grupo.cupoActual)</span>
@@ -299,6 +303,10 @@
                                                 else
                                                 {
                                                     <span class="badge bg-danger" style="float:left; margin-right: 10px;">Sin cupo</span>
+                                                }
+                                                @if (ViewBag.DateNow > grupo.fechaFinalizacionInscripcion)
+                                                {
+                                                    <span class="badge bg-danger" style="float:left; margin-right: 10px;">Inscripción fuera de plazo</span>
                                                 }
                                                 @if (ViewBag.Role == 1 || ViewBag.Role == 2)
                                                 {
